--- a/CSS/style.css
+++ b/CSS/style.css
@@ -249,7 +249,7 @@ header nav ul .nav-item .active {
 }
 
 
-
+/*------------
 .course .box {
   padding: 10px 10px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
@@ -266,7 +266,7 @@ header nav ul .nav-item .active {
   font-weight: 700;
   color: #ffcf88;
 }
-
+------*/
 .testimonial {
   margin-top: 15%;
 }
@@ -401,7 +401,6 @@ header nav ul .nav-item .active {
 /*================= Services End=================*/
 /*================= About Us Start=================*/
 .about-1 h1 {
-  text-align: center;
   color: black;
   font-weight: bold;
 }
@@ -460,4 +459,11 @@ footer {
 
 footer p {
   color: #fff;
+}
+/*================= Contact Us Start=================*/
+.form-row {
+  size: 40px;
+}
+.map-wrapper{
+  max-width: 700px;
 }
