--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,6 +21,9 @@ a {
 .section-title h2 {
   text-shadow: 1px 1px 2px #4444;
 }
+.active {
+  color : #0D6EFD !important;
+}
 
 /*****************************
     NavBar Start
@@ -78,10 +81,16 @@ svg.wave {
 
 
 .book {
-  background: rgba(75, 222, 248, 0.5);
+  background: #0D6EFD;
   margin: 0;
+  padding-top: 15px;
 }
-
+.book:hover{
+  background: radial-gradient(rgba(255, 255, 255, 0.6), #0D6EFD);
+} 
+.book:hover h1{
+  color: black !important;
+}
 .book .booking {
   margin: 0;
   padding: 50px 0px;
@@ -100,110 +109,14 @@ svg.wave {
     About Start
 ******************************/
 
-#about .col-lg-7 {
+/* #about .col-md-7 {
   background: rgba(75, 222, 248, 0.3);
-}
+} */
 .about .content {
-  padding: 0 80px;
+  padding: 25px 80px;
+  background-color: #0D6EFD !important;
 }
 
-.about .content h3 {
-  font-weight: 400;
-  font-size: 34px;
-  color: #5f5950;
-}
-
-.about .content h4 {
-  font-size: 20px;
-  font-weight: 700;
-  margin-top: 5px;
-}
-
-.about .content p {
-  font-size: 15px;
-  color: #848484;
-}
-
-.about .content ul {
-  list-style: none;
-  padding: 0;
-}
-
-.about .content ul li+li {
-  margin-top: 15px;
-}
-
-.about .content ul li {
-  position: relative;
-  padding-left: 26px;
-}
-
-.about .content ul i {
-  font-size: 20px;
-  color: #ffb03b;
-  position: absolute;
-  left: 0;
-  top: 2px;
-}
-
-.about .content p:last-child {
-  margin-bottom: 0;
-}
-
-.about .video-box {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  min-height: 400px;
-  position: relative;
-}
-
-.qualities-indicator li {
-  list-style: square;
-}
-
-@media (max-width: 1024px) {
-
-  .about .content,
-  .about .accordion-list {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-
-@media (max-width: 992px) {
-  .about .content {
-    padding-top: 30px;
-  }
-
-  .about .accordion-list {
-    padding-bottom: 30px;
-  }
-}
-
-@-webkit-keyframes pulsate-btn {
-  0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
-  }
-
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
-}
-
-@keyframes pulsate-btn {
-  0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
-  }
-
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
-}
 
 /*****************************
     About End
@@ -249,6 +162,7 @@ svg.wave {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
   margin-top: 50px;
+  
 }
 
 .work {
@@ -319,21 +233,18 @@ svg.wave {
     About Us Start
 ******************************/
 
-.about-1 h1 {
+.about-title h1 {
   color: black;
   font-weight: bold;
 }
 
-.about-1 p {
-  text-align: center;
-  padding: 3px;
-  
-}
+
 .about-item {
   
   background-color: white;
-
-  box-shadow: 0 0 9px rgba(0, 0, 0.6);
+  padding: 40px 20px 50px;
+  margin: 30px 0px 120px;
+  
 }
 
 .about-item hr {
@@ -346,12 +257,13 @@ svg.wave {
 }
 
 .about-item:hover {
-  background-color: #5fbff9;
+  background-color: #0D6EFD;
 }
 
 .about-item:hover i,
 .about-item:hover h3,
-.about-item:hover p {
+.about-item:hover p,
+.about-item:hover p .vision-text {
   color: #fff;
 }
 
