--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,9 +33,9 @@ a {
     url("../img/image3.jpg");
   background-position: center;
   background-size: cover;
-  width: 100%;
+  max-width: 100%;
   height: 100vh;
-  position: relative;
+  
 }
 :root {
   --main-color: #e6b30e;
@@ -104,6 +104,106 @@ svg.wave {
 /*****************************
     Login Form Start
 ******************************/
+
+/*****************************
+    Testimonials Start
+******************************/
+.testimonials .active {
+  color: #000 !important;
+}
+.testimonials h1 {
+	color: #333;
+	text-transform: uppercase;
+    font-family: 'Noto Sans', sans-serif;
+	font-weight: bold;
+	position: relative;
+}
+.testimonials hr {
+	width: 140px;
+	height: 3px;
+	background: #0D6EFD;
+}
+.testimonials .col-center {
+	margin: 0 auto;
+	float: none !important;
+}
+.testimonials .carousel {
+	margin: 50px auto;
+	padding: 0 70px;
+}
+.testimonials .carousel-item {
+	color: #666;
+	font-size: 14px;
+    text-align: center;
+	overflow: hidden;
+    min-height: 290px;
+    margin-top: 30px;
+}
+.testimonials .carousel .item .img-box {
+	width: 135px;
+	height: 135px;
+	margin: 0 auto;
+	padding: 5px;
+	border: 1px solid #ddd;
+	border-radius: 50%;
+}
+.testimonials .carousel .img-box img {
+	width: 100%;
+	height: 100%;
+	display: block;
+	border-radius: 50%;
+}
+.testimonials .carousel .testimonial {
+	padding: 30px 0 10px;
+}
+.testimonials .carousel .overview {	
+	font-style: italic;
+}
+.testimonials .carousel .overview b {
+	text-transform: uppercase;
+	color: #db584e;
+}
+.testimonials .carousel .carousel-control {
+	width: 40px;
+    height: 40px;
+    margin-top: -20px;
+    top: 50%;
+	background: none;
+}
+.testimonials .carousel-control i {
+    font-size: 68px;
+	line-height: 42px;
+    position: absolute;
+    display: inline-block;
+	color: rgba(0, 0, 0, 0.8);
+    text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
+}
+.testimonials .carousel .carousel-indicators {
+	bottom: -40px;
+}
+.testimonials .carousel-indicators li {
+	width: 20px;
+	height: 10px;
+	border-radius: 10px;
+}
+.carousel-indicators li.active{
+  width: 30px;
+}
+.testimonials .carousel-indicators li {	
+	background: #999;
+	border-color: transparent;
+	box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
+}
+.testimonials .carousel-indicators li.active {	
+	background: #555;		
+	box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
+}
+
+
+/*****************************
+    Testimonials End
+******************************/
+
 
 /*****************************
     About Start
